- `add-thought`: (reinstated) add custom thoughts to a dwarf

## New Features

## Fixes
- `gui/design`: fix clicking the center point when there is a mark behind it entering both mark dragging and center dragging at the same time. Now you can click once to move the shape, and click twice to move only the mark behind the center point.
- `warn-stranded`: when there was at least one truly stuck unit and miners were actively mining, the miners were also confusingly shown in the stuck units list
- `source`: fix issue where removing sources would make some other sources inactive
- `caravan`: display book and scroll titles in the goods and trade dialogs instead of generic scroll descriptions
- `item`: avoid error when scanning items that have no quality rating (like bars and other construction materials)
- `gui/blueprint`: changed hotkey for setting blueprint origin tile so it doesn't conflict with default map movement keys

## Misc Improvements
- `exportlegends`: make progress increase smoothly over the entire export and increase precision of progress percentage
- `gui/autobutcher`: ask for confirmation before zeroing out targets for all races
- `caravan`: move goods to trade depot dialog now allocates more space for the display of the value of very expensive items
- `extinguish`: allow selecting units/items/buildings in the UI to target them for extinguishing; keyboard cursor is only required for extinguishing map tiles that cannot be selected any other way
- `item`: change syntax so descriptions can be searched for without indicating the ``--description`` option. e.g. it's now ``item count royal`` instead of ``item count --description royal``
- `item`: add ``--verbose`` option to print each item as it is matched
- `gui/mod-manager`: will automatically unmark the default mod profile from being the default if it fails to load (due to missing or incompatible mods)
- `gui/quickfort`: can now dynamically adjust the dig priority of tiles designated by dig blueprints