@@ -39,6 +39,7 @@ Template for new versions:
 
 ## Fixes
 - `gui/design`: fix clicking the center point when there is a mark behind it entering both mark dragging and center dragging at the same time. Now you can click once to move the shape, and click twice to move only the mark behind the center point.
+- `fix/retrieve-units`: prevent pulling in duplicate units from offscreen
 - `warn-stranded`: when there was at least one truly stuck unit and miners were actively mining, the miners were also confusingly shown in the stuck units list
 - `source`: fix issue where removing sources would make some other sources inactive
 - `caravan`: display book and scroll titles in the goods and trade dialogs instead of generic scroll descriptions
